--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/hooks": "^8.1.1",
     "@mantine/notifications": "^8.1.1",
     "autoprefixer": "^10.4.21",
+    "dog-names": "^3.0.1",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.518.0",
     "react": "^19.1.0",
